--- a/css/styles.css
+++ b/css/styles.css
@@ -246,3 +246,32 @@ h4 {
 }
 
 /* MORE CSS FOR JS */
+.slider-container {
+  display: flex;
+  height: 450px;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 3s ease-in-out;
+  opacity: 0;
+}
+
+.slide.active {
+  opacity: 1;
+  transform: translate(0);
+}
+.slide.next {
+  opacity: 1;
+  transform: translate(100%);
+}
+.slide.last {
+  opacity: 1;
+  transform: translate(-100%);
+}
